--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sales_tax_cc",
+  "name": "itemis-sales-tax",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -24,11 +24,11 @@
     "supertest": "^6.3.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3",
-    "dotenv": "^16.0.3"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "D": "^1.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.17.14",
     "http": "^0.0.1-security"
