--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node dist/index.js",
-    "dev": "node src/index.ts",
+    "start": "tsc && node dist/server.js",
+    "dev": "node src/server.ts",
     "build": "npx tsc",
     "test": "jest --coverage",
     "test:watch": "npx jest --watchAll"
